--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Set up JDK 8
         uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
-          java-version: '8'
+          distribution: "temurin"
+          java-version: "8"
 
       - name: Set settings.xml
         uses: s4u/maven-settings-action@v2.8.0
