--- a/base/pom.xml
+++ b/base/pom.xml
@@ -3,13 +3,13 @@
   <groupId>com.ozonehis</groupId>
   <artifactId>ozone-cambodia</artifactId>
   <name>Ozone for Cambodia</name>
-  <version>1.6.0-SNAPSHOT</version>
+  <version>1.6.0</version>
   <packaging>pom</packaging>
 
   <parent>
     <groupId>com.ozonehis</groupId>
     <artifactId>ozone-cambodia-parent</artifactId>
-    <version>1.6.0-SNAPSHOT</version>
+    <version>1.6.0</version>
   </parent>
 
   <properties>
