Fix Route translation

--- a/configs/openmrs/frontend_config/ozone-frontend-config.json
+++ b/configs/openmrs/frontend_config/ozone-frontend-config.json
@@ -248,11 +248,13 @@
     "Translation overrides": {
       "en": {
         "drugOrders": "Drug orders",
-        "orderActionIncomplete": "Incomplete"
+        "orderActionIncomplete": "Incomplete",
+        "editRouteComboBoxTitle": "Route"
       },
       "km": {
         "drugOrders": "វេជ្ជបញ្ជាសម្រាប់ឱសថ",
-        "orderActionIncomplete": "Incomplete"
+        "orderActionIncomplete": "Incomplete",
+        "editRouteComboBoxTitle": "របៀបប្រើប្រាស់"
       }
     },
     "Display conditions": {
