--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ozonehis</groupId>
-  <artifactId>ozone-cambodia-parent</artifactId>
-  <name>Ozone for Cambodia - Parent project</name>
+  <artifactId>ozone-cambodia-aggregator</artifactId>
+  <description>Ozone for Cambodia - Aggregator</description>
   <version>1.7.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
@@ -37,13 +37,6 @@
       </modules>
     </profile>
   </profiles>
-
-  <repositories>
-    <repository>
-      <id>mks-nexus-public</id>
-      <url>https://nexus.mekomsolutions.net/repository/maven-public/</url>
-    </repository>
-  </repositories>
 
   <distributionManagement>
     <repository>
