--- a/prod/pom.xml
+++ b/prod/pom.xml
@@ -7,12 +7,12 @@
     <groupId>com.ozonehis</groupId>
     <artifactId>maven-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath></relativePath>
   </parent>
 
   <groupId>com.ozonehis</groupId>
   <artifactId>ozone-cambodia-prod</artifactId>
   <version>1.7.0-SNAPSHOT</version>
+  <description>Ozone Cambodia - with production dependencies</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
