--- a/base/pom.xml
+++ b/base/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.ozonehis</groupId>
     <artifactId>maven-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <relativePath></relativePath>
   </parent>
 
   <groupId>com.ozonehis</groupId>
@@ -69,6 +70,26 @@
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>mks-nexus-public</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-public/</url>
+    </repository>
+  </repositories>
+
+  <distributionManagement>
+    <repository>
+      <name>Mekom Solutions Nexus repo for releases</name>
+      <id>mks-nexus-public</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-releases</url>
+    </repository>
+    <snapshotRepository>
+      <name>Mekom Solutions Nexus repo for snapshots</name>
+      <id>mks-nexus-public-snapshots</id>
+      <url>https://nexus.mekomsolutions.net/repository/maven-snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
 
   <profiles>
     <profile>
