Override ozone-scripts and build/validate -PR on CI.

--- a/prod/pom.xml
+++ b/prod/pom.xml
@@ -10,7 +10,6 @@
     <relativePath></relativePath>
   </parent>
 
-  <groupId>com.ozonehis</groupId>
   <artifactId>ozone-cambodia-prod</artifactId>
   <version>1.7.0-SNAPSHOT</version>
   <description>Ozone Cambodia - with production dependencies</description>
@@ -32,6 +31,14 @@
       <artifactId>ozone-config-cambodia0</artifactId>
       <type>zip</type>
       <version>${ozone.version}</version>
+    </dependency>
+
+    <!-- override the ozone-scripts dependency -->
+    <dependency>
+      <groupId>com.ozonehis</groupId>
+      <artifactId>ozone-scripts</artifactId>
+      <type>zip</type>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
