--- a/prod/pom.xml
+++ b/prod/pom.xml
@@ -10,7 +10,6 @@
     <relativePath></relativePath>
   </parent>
 
-  <groupId>com.ozonehis</groupId>
   <artifactId>ozone-cambodia-prod</artifactId>
   <version>1.7.0-SNAPSHOT</version>
   <description>Ozone Cambodia - with production dependencies</description>
@@ -24,6 +23,9 @@
     <ozone.artifactId>ozone-cambodia</ozone.artifactId>
     <ozone.groupId>com.ozonehis</ozone.groupId>
     <ozone.version>1.7.0-SNAPSHOT</ozone.version>
+
+    <!-- Classifier for the dependency report artifact -->
+    <dependencyReportClassifier>dependencies</dependencyReportClassifier>
   </properties>
 
   <dependencies>
@@ -55,6 +57,45 @@
               <outputDirectory>
                 ${project.build.directory}/${project.artifactId}-${project.version}/distro/</outputDirectory>
               <includeArtifactIds>ozone-config-cambodia0</includeArtifactIds>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- Compile a dependency report -->
+      <plugin>
+        <groupId>net.mekomsolutions.maven.plugin</groupId>
+        <artifactId>dependency-tracker-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>Compile dependency report</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>track</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- Attach the dependency report to the build -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>Attach the dependency report</id>
+            <phase>package</phase>
+            <goals>
+              <goal>attach-artifact</goal>
+            </goals>
+            <configuration>
+              <artifacts>
+                <artifact>
+                  <file>
+                    ${project.build.directory}/${project.artifactId}-${project.version}-dependencies.txt</file>
+                  <type>txt</type>
+                  <classifier>${dependencyReportClassifier}</classifier>
+                </artifact>
+              </artifacts>
             </configuration>
           </execution>
         </executions>
