--- a/.github/workflows/check-deps.yml
+++ b/.github/workflows/check-deps.yml
@@ -10,7 +10,8 @@ jobs:
     uses: mekomsolutions/shared-github-workflow/.github/workflows/maven-check-deps-build-publish.yml@main
     with:
       java-version: "8"
-      maven-args: "-P prod -DskipTests=true"
+      maven-args: "-P prod -DskipTests"
+      check-deps-maven-args: "-P prod -DskipTests"
     secrets:
       NEXUS_USERNAME: ${{ secrets.MEKOM_NEXUS_USERNAME }}
       NEXUS_PASSWORD: ${{ secrets.MEKOM_NEXUS_PASSWORD }}
