KH-540: Rename the Nexus server ID

--- a/base/pom.xml
+++ b/base/pom.xml
@@ -123,7 +123,7 @@
   <distributionManagement>
     <repository>
       <name>Mekom Solutions Nexus repo for releases</name>
-      <id>mks-nexus-public</id>
+      <id>mks-nexus-public-releases</id>
       <url>https://nexus.mekomsolutions.net/repository/maven-releases</url>
     </repository>
     <snapshotRepository>
