--- a/base/pom.xml
+++ b/base/pom.xml
@@ -153,6 +153,25 @@
       </activation>
       <build>
         <plugins>
+            <plugin>
+              <artifactId>maven-antrun-plugin</artifactId>
+              <executions>
+                <execution>
+                  <id>Copy OpenMRS Initializer configs for validation</id>
+                  <phase>pre-integration-test</phase>
+                  <configuration>
+                    <target>
+                      <copy todir="${project.build.directory}/validator/configuration">
+                        <fileset dir="${project.build.directory}/${project.artifactId}-${project.version}/distro/configs/openmrs/initializer_config"/>
+                      </copy>
+                    </target>
+                  </configuration>
+                  <goals>
+                    <goal>run</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
           <plugin>
             <groupId>org.openmrs.maven.plugins</groupId>
             <artifactId>openmrs-packager-maven-plugin</artifactId>
