--- a/prod/pom.xml
+++ b/prod/pom.xml
@@ -139,26 +139,27 @@
       </activation>
       <build>
         <plugins>
-            <!-- copy over merged/packaged OpenMRS config for validation at the integration-test phase -->
-            <plugin>
-              <artifactId>maven-antrun-plugin</artifactId>
-              <executions>
-                <execution>
-                  <id>Copy OpenMRS Initializer configs for validation</id>
-                  <phase>pre-integration-test</phase>
-                  <configuration>
-                    <target>
-                      <copy todir="${project.build.directory}/validator/configuration">
-                        <fileset dir="${project.build.directory}/${project.artifactId}-${project.version}/distro/configs/openmrs/initializer_config"/>
-                      </copy>
-                    </target>
-                  </configuration>
-                  <goals>
-                    <goal>run</goal>
-                  </goals>
-                </execution>
-              </executions>
-            </plugin>
+          <!-- copy over merged/packaged OpenMRS config for validation at the integration-test phase -->
+          <plugin>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>Copy OpenMRS Initializer configs for validation</id>
+                <phase>pre-integration-test</phase>
+                <configuration>
+                  <target>
+                    <copy todir="${project.build.directory}/validator/configuration">
+                      <fileset
+                        dir="${project.build.directory}/${project.artifactId}-${project.version}/distro/configs/openmrs/initializer_config" />
+                    </copy>
+                  </target>
+                </configuration>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
           <!-- hooking the OpenMRS config validation to the integration-test phase -->
           <plugin>
             <groupId>org.openmrs.maven.plugins</groupId>
@@ -171,8 +172,7 @@
                   <goal>validate-configurations</goal>
                 </goals>
                 <configuration>
-                  <sourceDir>
-                    ${project.build.directory}/${project.artifactId}-${project.version}/distro/configs/openmrs/initializer_config</sourceDir>
+                  <sourceDir>${project.build.directory}/validator/configuration</sourceDir>
                 </configuration>
               </execution>
             </executions>
